<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_shadow_start_color"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="326dp"
        android:layout_height="509dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/card1" />


    <Button
        android:id="@+id/buttonStop"
        android:layout_width="340dp"
        android:layout_height="62dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/design_default_color_error"
        android:text="@string/stop"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <Button
        android:id="@+id/buttonRestart"
        style="@style/optionButton"
        android:text="@string/restart"
        app:layout_constraintStart_toStartOf="@+id/buttonStop"
        app:layout_constraintTop_toBottomOf="@+id/buttonStop" />

    <Button
        android:id="@+id/buttonRules"
        style="@style/optionButton"
        android:text="@string/rules_button"
        app:layout_constraintEnd_toEndOf="@+id/buttonStop"
        app:layout_constraintTop_toBottomOf="@+id/buttonStop" />




</androidx.constraintlayout.widget.ConstraintLayout>